--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".sell_book.BookSeller">
-        </activity>
+        <activity android:name=".main.About"></activity>
+        <activity android:name=".OrderInformation" />
+        <activity android:name=".sell_book.BookSeller" />
         <activity android:name=".profile.Profile" />
         <activity android:name=".login_signup.Splash">
             <intent-filter>
